# github-ai-trend-radar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ai-trend-radar.yml
config/: company_profile.default.yaml  company_profile.local.yaml.example  report.default.yaml  scoring.default.yaml  sources.default.yaml  topics.default.yaml
data/: watchlist.example.yaml
skills/github_ai_trend_radar/: SKILL.md
src/github_ai_trend_radar/: __init__.py  config_loader.py  deep_research.py  inbox.py  llm_client.py  main.py  run_context.py  run_summary.py  watchlist.py  watchlist_queue.py
src/github_ai_trend_radar/collectors/: __init__.py  github_repo.py  github_search.py  ossinsight.py
src/github_ai_trend_radar/config/: env.py
src/github_ai_trend_radar/diagnostics/: __init__.py  doctor.py
src/github_ai_trend_radar/llm/: __init__.py  client.py  config.py  errors.py  json_utils.py
tests/: test_cli.py  test_collect_failure.py  test_collect_integration.py  test_collectors.py  test_config_loader.py  test_dedupe.py  test_deep_research_p2.py  test_doctor.py  test_env.py  test_github_search.py  test_inbox_watch_research.py  test_llm_client.py  test_llm_json_utils.py  test_llm_ranker.py  test_normalize.py  test_push_command.py  test_pushplus.py  test_pushplus_summary.py  test_quality_gate.py  test_render_command.py  test_render_html.py  test_render_markdown.py  test_report_model.py  test_report_zh_intelligence.py  test_run_context.py  test_run_summary.py  test_score_command.py  test_scoring.py  test_site_build.py  test_storage.py  test_watchlist_queue.py
(+50 files in other folders)
