[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-ai-trend-radar"
version = "0.1.0"
description = "Generate GitHub AI open source trend daily, weekly, and monthly reports."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
  { name = "github-ai-trend-radar maintainers" }
]
dependencies = [
  "requests",
  "pyyaml",
  "beautifulsoup4",
  "python-dateutil",
  "python-dotenv",
  "jinja2",
  "rich",
  "pytest",
]

[project.scripts]
github-ai-trend-radar = "github_ai_trend_radar.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
github_ai_trend_radar = ["prompts/*.md", "renderers/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
